--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 remote_theme: pages-themes/leap-day@v0.2.0
+
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+navigation:
+  - name: Home
+    link: /
+  - name: Leaderboard
+    link: /leaderboard.html
