--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,11 @@ remote_theme: pages-themes/leap-day@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
+collections:
+  pages:
+    output: true
+    permalink: /:path/
+
 navigation:
   - name: Home
     link: /
